# dungeoneer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  todo.org
dungeoneer-api/: Cargo.toml
dungeoneer-api/src/: character.rs  dices.rs  lib.rs
dungeoneer-tui/: Cargo.toml
dungeoneer-tui/src/: main.rs
dungeoneer-types/: Cargo.toml
dungeoneer-types/src/: armor.rs  character.rs  class.rs  equipment.rs  general.rs  lib.rs  race.rs  weapon.rs
dungeoneer-types/src/class/: mod.rs  sorcerer.rs
