[workspace.package]
authors = ["Ludvig Blomkvist <me@ludblom.net>"]
repository = "https://github.com/ludblom/dungeoneer"
license = "GPL-3.0"
edition = "2021"
rust-version = "1.83.0"

[workspace]
resolver = "2"
members = [
    "dungeoneer-tui",
    "dungeoneer-api",
    "dungeoneer-types",
]

[workspace.lints.rust]
rust_2018_idioms = "deny"

[workspace.lints.clippy]
unused_async = "deny"
