[package]
name = "dungeoneer-api"
description = "Interface to Dungeoneer"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rand = "0.8.5"

dungeoneer-types = { path = "../dungeoneer-types" }
