[package]
name = "dungeoneer-tui"
description = "TUI to the Dungeneer app"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dungeoneer-api = { path = "../dungeoneer-api" }
dungeoneer-types = { path = "../dungeoneer-types" }
