[package]
name = "dungeoneer-tui"
description = "TUI to the Dungeneer app"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
crossterm = "0.27.0"
ratatui = "0.28.0"
color-eyre = "0.6.2"
strum = "0.26.1"

dungeoneer-api = { path = "../dungeoneer-api" }
dungeoneer-types = { path = "../dungeoneer-types" }
