[package]
name = "dungeoneer-tui"
description = "TUI to the Dungeneer app"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.0"
color-eyre = "0.6.3"
strum = "0.26.3"

dungeoneer-api = { path = "../dungeoneer-api" }
dungeoneer-types = { path = "../dungeoneer-types" }
