[package]
name = "dungeoneer-types"
description = "Common data structures and types for the Dungeoneer application"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = "0.4.33"
serde = { version = "1.0", features = ["derive"] }
